--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
 
 /* Your CSS Code here. */
+.holder {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap
+}
+.holder .item {
+	flex: 0 0 33.33%
+}
